website.css
.slide-show {
	position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
}

.slide img {
	width: 100%;
	text-align: center;
}

.slide-description { 
	position: absolute; 
	left: 0;
	top: 10px;
	width: 100%;
	text-align: center;
	color: rgba(0, 0, 0, 0.8);
	font-size: 150%;
}

/* Fading animation */
.fade {
	-webkit-animation-name: fade;
	-webkit-animation-duration: 1.5s;
	animation-name: fade;
	animation-duration: 1.5s;
}

@-webkit-keyframes fade {
	from {opacity: .4} 
	to {opacity: 1}
}

@keyframes fade {
	from {opacity: .4} 
	to {opacity: 1}
}

.main-container {
	position: fixed;
	top: 60px;
	width: 100%;	
	height: 100%;	
	float: left;
}

.logo {
	position: absolute;
	top: -85px;
	background: url(images/pawn.png) no-repeat left top;
	padding: 100px 90px 100px 90px;
}

.main-menu {
	position: absolute;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.2);
}

.social-media-buttons {
	position: absolute;
	top: 5px;
	right: 0;
}

.social-media-button {
	float: right;
	padding: 0 5px 0 5px;
	background-color: transparent;
}

ul {
	list-style-type: none;

	/* Centre alignment of the table menu. */
	display: table;
	margin: 0 auto;
}

ul li {
	padding: 15px 100px 15px 100px;
	float: left;
	margin: 0px 1px 0px 0px;
	background-color: #000000;
	color: #a9a9a9;
	font-size: large;
}

.linkstyle {
	color: #a9a9a9;
}

.button-right {
	position: absolute;
	right: 2px;
	top: 45%;
	padding: 8px 8px;
}

.button-left {
	position: absolute;
	left: 2px;
	top: 45%;
	padding: 8px 8px;
}

.button-down {
	position: absolute;
	bottom: 10px;
	padding: 8px 8px;
	
	width: 100%;
	text-align: center;
}

.button-up {
	position: absolute;
	bottom: 10px;
	padding: 8px 8px;
	
	width: 100%;
	text-align: center;
}

.button-right:hover, .button-left:hover {
  background-color: rgba(0,0,0,0.3);
}

.content {
	position: relative;	
	top: 85px;
	background-color: rgba(0, 0, 0, 0.6);
	color: #a9a9a9;
	padding: 0 10px 0 10px;

	overflow: auto;
	max-height: calc(70vh - 50px);

/* For the different browser types (firefox & chrome works):
	Opera: height: -o-calc(100% - 65px); 
	Google, safari: height: -webkit-calc(100% - 65px); 
	Firefox: height: -moz-calc(100% - 65px); 
*/
	
	margin: auto;
	width: 40%;
}

.footer {
	position: absolute;
	bottom: 0;
	left: 2px;
	right: 2px;
	background-color: rgba(0, 0, 0, 0.5);
	height: 17px;
}

